# facebase-deriva-mcp-plugin

./: README.md  pyproject.toml
src/facebase_deriva_mcp_plugin/: __init__.py  enricher.py  plugin.py  prompts.py
tests/: test_enricher.py  test_plugin.py
